--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Hello world",
+  "description": "Changed this",
   "dependencies": {
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
