Making changes 26 feb v1

--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "New one": "this is changes"
   },
-  "keywords": [],
+  "keywords": [
+    {
+      "new changes": "Latest"
+    }
+  ],
   "author": "",
   "license": "ISC",
   "description": "Changed this",
