--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "New one": "this is changes"
+    "New one": "this is changes",
+    "newKey2": "Added this"
   },
   "keywords": [
     {
@@ -21,5 +22,7 @@
     "node-fetch": "^2.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+  "newKey9": "",
+  "newKey10": ""
 }
