Checking Merge changes

--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
-  "newKey9": ""
+  "newKey9": "Checking merge conflicts"
 }
